MET-5968 Updated general statistics API call with new parameter